[package]
name = "rins_markdown_parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Rafikov Rinat <r.rafikov@ukma.edu.ua>"]
description = "Simple markdown parser written on Rust"
homepage = "https://github.com/r-rin/rins-markdown-parser"
repository = "https://github.com/r-rin/rins-markdown-parser"
documentation = "https://docs.rs/rins_markdown_parser/"

[dependencies]
anyhow = "1.0.93"
clap = "4.5.21"
html-escape = "0.2.13"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
